--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hola mundo de git!</h1>
   </body>
 </html>
